include(GNUInstallDirs)

cmake_minimum_required(VERSION 2.6)

SET(CXX_DISABLE_WERROR TRUE)
INCLUDE(cmake/base.cmake)
INCLUDE(cmake/cpack.cmake)
INCLUDE(cmake/boost.cmake)
INCLUDE(cmake/ros.cmake)

SET(PROJECT_NAME resource_retriever)
SET(PROJECT_DESCRIPTION "Version independent from ROS")
SET(PROJECT_URL "")

SETUP_PROJECT()

ADD_REQUIRED_DEPENDENCY ("libcurl")
ADD_REQUIRED_DEPENDENCY ("urdfdom")

ADD_LIBRARY(${PROJECT_NAME} SHARED src/retriever.cpp)

PKG_CONFIG_USE_DEPENDENCY (${PROJECT_NAME} "libcurl")
PKG_CONFIG_USE_DEPENDENCY (${PROJECT_NAME} "urdfdom")

PKG_CONFIG_APPEND_LIBS(${PROJECT_NAME})

INSTALL (TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})

INSTALL (DIRECTORY include/${PROJECT_NAME}/
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})

INSTALL (FILES package.xml DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME})

SETUP_PROJECT_FINALIZE()
